<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="2dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background">

        <ImageView
            android:id="@+id/iv_airplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:src="@drawable/airplane_top"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_airplane"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="0dp">

                <TextView
                    android:id="@+id/tx_id_label"
                    android:gravity="center_horizontal"
                    android:text="@string/id"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"/>

                <TextView
                    android:id="@+id/tx_id"
                    android:text="1"/>

            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/tx_name_label"
                    android:gravity="center"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/tx_name"
                    android:text="@string/airplane"/>
            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/tx_speed_label"
                    android:gravity="center"
                    android:text="@string/speed"/>

                <TextView
                    android:id="@+id/tx_speed"
                    android:text="9999"/>

            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/tx_direction_label"
                    android:gravity="center"
                    android:text="@string/direction"/>

                <TextView
                    android:id="@+id/tx_direction"
                    android:text="45"/>

            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/tx_cartesian_title"
                    android:layout_span="6"
                    android:gravity="center"
                    android:text="@string/cartesian"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"/>

            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/tx_x_label"
                    android:gravity="center"
                    android:text="X"/>

                <TextView
                    android:id="@+id/tx_x"/>

                <TextView
                    android:id="@+id/tx_y_label"
                    android:gravity="center"
                    android:text="Y"/>

                <TextView
                    android:id="@+id/tx_y"
                    android:layout_height="wrap_content"
                    android:text=""/>

            </TableRow>

            <TableRow android:layout_width="0dp">

                <TextView
                    android:id="@+id/tx_polar_title"
                    android:layout_span="6"
                    android:gravity="center"
                    android:text="@string/polar"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tx_theta_label"
                    android:gravity="center"
                    android:text="@string/theta"/>

                <TextView
                    android:id="@+id/tx_theta"
                    android:text="45"/>

                <TextView
                    android:id="@+id/tx_radius_label"
                    android:gravity="center"
                    android:text="@string/radius"/>

                <TextView
                    android:id="@+id/tx_radius"
                    android:text="5"/>
            </TableRow>
        </TableLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>

