<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activitys.EditAirplane">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Switch
            android:id="@+id/sw_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:hint="@string/edit"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sw_edit">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coordinate_x"
                android:inputType="numberDecimal|numberSigned"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coordinate_y"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_theta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/theta"
                android:inputType="numberDecimal|numberSigned"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/radius"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/speed"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direction"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_done"
            android:backgroundTint="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"/>

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textInputLayout7"
            android:background="@drawable/ic_delete_forever"
            android:layout_marginStart="50dp"
            android:backgroundTint="@android:color/holo_red_dark"/>

        <ImageView
            android:id="@+id/iv_airplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textInputLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_below="@id/textInputLayout7"
            app:srcCompat="@drawable/airplane_top"/>

    </RelativeLayout>

</ScrollView>
